// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/channel_notifications_modal/ExpandView should match snapshot, DESKTOP on expanded view 1`] = `
<SettingItemMax
  containerStyle=""
  infoPosition="bottom"
  inputs={
    Array [
      <div>
        <fieldset>
          <legend
            className="form-legend"
          >
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Send desktop notifications"
              id="channel_notifications.sendDesktop"
            />
          </legend>
          <div
            className="radio"
          >
            <label
              className=""
            >
              <input
                checked={true}
                id="channelNotificationAllActivity"
                name="channelNotifications"
                onChange={[MockFunction]}
                type="radio"
                value="all"
              />
              <Describe
                globalNotifyLevel="default"
                memberNotifyLevel="all"
                section="desktop"
              />
            </label>
          </div>
          <div
            className="radio"
          >
            <label
              className=""
            >
              <input
                checked={false}
                id="channelNotificationMentions"
                name="channelNotifications"
                onChange={[MockFunction]}
                type="radio"
                value="mention"
              />
              <Describe
                globalNotifyLevel="default"
                memberNotifyLevel="mention"
                section="desktop"
              />
            </label>
          </div>
          <div
            className="radio"
          >
            <label>
              <input
                checked={false}
                id="channelNotificationNever"
                name="channelNotifications"
                onChange={[MockFunction]}
                type="radio"
                value="none"
              />
              <Describe
                globalNotifyLevel="default"
                memberNotifyLevel="none"
                section="desktop"
              />
            </label>
          </div>
        </fieldset>
        <div
          className="mt-5"
        >
          <ExtraInfo
            section="desktop"
          />
        </div>
        <React.Fragment>
          <hr />
          <fieldset>
            <legend
              className="form-legend"
            >
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Notification sound"
                id="channel_notifications.sound"
              />
            </legend>
            <div
              className="radio"
            >
              <label
                className=""
              >
                <input
                  checked={false}
                  id="channelDesktopSoundOn"
                  name="channelDesktopSound"
                  type="radio"
                  value="on"
                />
                <Memo(MemoizedFormattedMessage)
                  defaultMessage="On"
                  id="channel_notifications.sound.on.title"
                />
              </label>
            </div>
            <div
              className="radio"
            >
              <label>
                <input
                  checked={false}
                  id="channelDesktopSoundOff"
                  name="channelDesktopSound"
                  type="radio"
                  value="off"
                />
                <Memo(MemoizedFormattedMessage)
                  defaultMessage="Off"
                  id="channel_notifications.sound.off.title"
                />
              </label>
            </div>
            <div
              className="mt-5"
            >
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Notification sounds are available on Firefox, Edge, Safari, Chrome and Mattermost Desktop Apps."
                id="channel_notifications.sound_info"
              />
            </div>
          </fieldset>
        </React.Fragment>
      </div>,
    ]
  }
  saving={false}
  section=""
  serverError=""
  submit={[MockFunction]}
  title={
    <SectionTitle
      isExpanded={true}
      onClickResetButton={[MockFunction]}
      section="desktop"
    />
  }
  updateSection={[MockFunction]}
/>
`;

exports[`components/channel_notifications_modal/ExpandView should match snapshot, MARK_UNREAD on expanded view 1`] = `
<SettingItemMax
  containerStyle=""
  infoPosition="bottom"
  inputs={
    Array [
      <div>
        <fieldset>
          <div
            className="radio"
          >
            <label
              className=""
            >
              <input
                checked={false}
                id="channelNotificationUnmute"
                name="channelNotificationMute"
                onChange={[MockFunction]}
                type="radio"
                value="mention"
              />
              <Describe
                memberNotifyLevel="mention"
                section="markUnread"
              />
            </label>
          </div>
          <div
            className="radio"
          >
            <label
              className=""
            >
              <input
                checked={true}
                id="channelNotificationMute"
                name="channelNotificationMute"
                onChange={[MockFunction]}
                type="radio"
                value="all"
              />
              <Describe
                memberNotifyLevel="all"
                section="markUnread"
              />
            </label>
          </div>
        </fieldset>
        <div
          className="mt-5"
        >
          <ExtraInfo
            section="markUnread"
          />
        </div>
      </div>,
    ]
  }
  saving={false}
  section=""
  serverError=""
  submit={[MockFunction]}
  title={
    <SectionTitle
      isExpanded={true}
      onClickResetButton={[MockFunction]}
      section="markUnread"
    />
  }
  updateSection={[MockFunction]}
/>
`;

exports[`components/channel_notifications_modal/ExpandView should match snapshot, PUSH on expanded view 1`] = `
<SettingItemMax
  containerStyle=""
  infoPosition="bottom"
  inputs={
    Array [
      <div>
        <fieldset>
          <legend
            className="form-legend"
          >
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Send mobile push notifications"
              id="channel_notifications.sendMobilePush"
            />
          </legend>
          <div
            className="radio"
          >
            <label
              className=""
            >
              <input
                checked={true}
                id="channelNotificationAllActivity"
                name="channelNotifications"
                onChange={[MockFunction]}
                type="radio"
                value="all"
              />
              <Describe
                globalNotifyLevel="default"
                memberNotifyLevel="all"
                section="push"
              />
            </label>
          </div>
          <div
            className="radio"
          >
            <label
              className=""
            >
              <input
                checked={false}
                id="channelNotificationMentions"
                name="channelNotifications"
                onChange={[MockFunction]}
                type="radio"
                value="mention"
              />
              <Describe
                globalNotifyLevel="default"
                memberNotifyLevel="mention"
                section="push"
              />
            </label>
          </div>
          <div
            className="radio"
          >
            <label>
              <input
                checked={false}
                id="channelNotificationNever"
                name="channelNotifications"
                onChange={[MockFunction]}
                type="radio"
                value="none"
              />
              <Describe
                globalNotifyLevel="default"
                memberNotifyLevel="none"
                section="push"
              />
            </label>
          </div>
        </fieldset>
        <div
          className="mt-5"
        >
          <ExtraInfo
            section="push"
          />
        </div>
      </div>,
    ]
  }
  saving={false}
  section=""
  serverError=""
  submit={[MockFunction]}
  title={
    <SectionTitle
      isExpanded={true}
      onClickResetButton={[MockFunction]}
      section="push"
    />
  }
  updateSection={[MockFunction]}
/>
`;
